# rosary_prayer_counter

./: .gitignore  Jenkinsfile  Jenkinsfile-Tag  compile_rosary.sh  dev_requiremets.txt  pyproject.toml  repo_setup.sh
docker/jenkins-agent/: Dockerfile  readme.md
prayers/divine_mercy/: pyproject.toml
prayers/rosary/rosary/: rosary.py
python_lib/counter_gui/: pyproject.toml
python_lib/counter_gui/counter_gui/bare_gui/: gui.py  gui_api.py  gui_user.py
python_lib/rosary/: pyproject.toml
python_lib/rosary/rosary/: rosary.py
python_lib/rosary/rosary/runner/: rosary_runner.py
scripts/: compile_rosary.py  start_rosary.py
